crates/sui-prover/tests/snapshots/omit_opaque/omit_opaque_default.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 146
expression: output
---
exiting with verification errors
error: prover::ensures assertion does not hold
   ┌─ tests/inputs/omit_opaque/omit_opaque_default.move:25:5
   │
25 │     ensures(x == 70); // issue, this will be 0
   │     ^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/omit_opaque/omit_opaque_default.move:22: bar_spec
   =         x = 21u8
   =     at tests/inputs/omit_opaque/omit_opaque_default.move:23: bar_spec
   =         x = 21u8
   =     at tests/inputs/omit_opaque/omit_opaque_default.move:11: bar
   =         x = 21u8
   =     at tests/inputs/omit_opaque/omit_opaque_default.move:16: foo_spec
   =         x = 0u8
   =     at tests/inputs/omit_opaque/omit_opaque_default.move:19: foo_spec
   =         x = 0u8
   =     at tests/inputs/omit_opaque/omit_opaque_default.move:12: bar
